<resources>
    <string name="app_name">Chat</string>

    <string name="server_fail">服务器断开连接</string>

    <!--navigation-->
    <string name="navigation_message">聊天</string>
    <string name="navigation_friends">好友</string>
    <string name="navigation_mine">我的</string>
    <!--toast-->
    <string name="toast_11_phone">请输入11位手机号</string>
    <string name="toast_password">请输入密码</string>
    <string name="toast_password_no_same">密码不一致，重新输入</string>
    <!--activity_login-->
    <string name="login_title">聊天工具</string>
    <string name="login_content">登录发现更多精彩</string>
    <string name="login_hint_username">请输入登录账号</string>
    <string name="login_hint_password">请输入登录密码</string>
    <string name="login_phone_input_limit">1234567890</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <!--activity_register-->
    <string name="register_content">新用户注册</string>
    <string name="register_hint_username">请设置登录账号</string>
    <string name="register_hint_passwrod">请设置登录密码</string>
    <string name="register_hint_passwrod_again">请确认登录密码</string>
    <!--fragment_message-->
    <string name="message_search_hint">请输入关键词搜索聊天记录</string>
    <string name="message_no_data">暂无聊天记录</string>
    <!--activity_chat-->
    <string name="chat_item_voice_second">%1$s″</string>
    <string name="chat_voice_tip">按住说话</string>
    <string name="chat_voice_second">%1$ss</string>
    <!--fragment_friends-->
    <string name="friends_title">好友</string>
    <string name="friends_search_hint">请输入关键词搜索好友</string>
    <string name="friends_new">新朋友</string>
    <string-array name="all_letters">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
        <item>#</item>
    </string-array>
    <!--activity_search_friend-->
    <string name="new_friend_title">新朋友</string>
    <string name="new_friend_search_hint">请输入手机号搜索好友</string>
    <string name="new_friend_no_friend">该用户不存在</string>
    <string name="new_friend_already">已添加</string>
    <string name="new_friend_agree">同\u3000意</string>
    <!--activity_map-->
    <string name="map_cancel">取消</string>
    <string name="map_send">发送</string>
    <string name="map_search_hint">搜索地点</string>
    <string name="map_back">返回</string>
    <!--activity_friend-->
    <string name="friend_add">添加好友</string>
    <string name="friend_agree">同意</string>
    <string name="friend_send_message">发消息</string>
    <string name="friend_toast_apply">发送好友请求</string>
    <!--fragment_mine-->
    <string name="mine_setting">设置</string>
    <string name="mine_quit">退出登录</string>
    <string name="mine_logout">注销账号</string>
</resources>