<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints">

    <ImageView
        android:src="@mipmap/bg_login"
        android:layout_width="375dp"
        android:layout_height="148.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        android:text="@string/login_title"
        android:textSize="18sp"
        android:textColor="@color/black_333"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_content"
        android:text="@string/register_content"
        android:textSize="21sp"
        android:textColor="@color/black_333"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

    <EditText
        android:id="@+id/et_username"
        android:textSize="15sp"
        android:textColor="@color/black_333"
        android:hint="@string/register_hint_username"
        android:textColorHint="@color/black_bbb"
        android:background="@drawable/shape_rectangle_f8f_100"
        android:maxLines="1"
        android:maxLength="11"
        android:inputType="number|phone"
        android:paddingVertical="17dp"
        android:paddingHorizontal="20dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="33dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_content"/>

    <EditText
        android:id="@+id/et_password"
        android:textSize="15sp"
        android:textColor="@color/black_333"
        android:hint="@string/register_hint_passwrod"
        android:textColorHint="@color/black_bbb"
        android:background="@drawable/shape_rectangle_f8f_100"
        android:maxLines="1"
        android:inputType="textPassword"
        android:paddingVertical="17dp"
        android:paddingHorizontal="20dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username"/>

    <EditText
        android:id="@+id/et_password_again"
        android:textSize="15sp"
        android:textColor="@color/black_333"
        android:hint="@string/register_hint_passwrod_again"
        android:textColorHint="@color/black_bbb"
        android:background="@drawable/shape_rectangle_f8f_100"
        android:maxLines="1"
        android:inputType="textPassword"
        android:paddingVertical="17dp"
        android:paddingHorizontal="20dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"/>

    <TextView
        android:id="@+id/tv_register"
        android:text="@string/login_register"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/shape_rectangle_279_100"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_again"/>

</androidx.constraintlayout.widget.ConstraintLayout>