<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints">

    <ImageView
        android:src="@mipmap/bg_login"
        android:layout_width="375dp"
        android:layout_height="148.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        android:text="@string/login_title"
        android:textSize="18sp"
        android:textColor="@color/black_333"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_content"
        android:text="@string/login_content"
        android:textSize="21sp"
        android:textColor="@color/black_333"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

    <LinearLayout
        android:id="@+id/layout_username"
        android:orientation="horizontal"
        android:background="@drawable/shape_rectangle_f8f_100"
        android:layout_marginTop="33dp"
        android:paddingVertical="17dp"
        android:paddingHorizontal="20dp"
        android:layout_marginHorizontal="25dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_content">

        <EditText
            android:text="17333781851"
            android:id="@+id/et_username"
            android:textSize="15sp"
            android:textColor="@color/black_333"
            android:hint="@string/login_hint_username"
            android:textColorHint="@color/black_bbb"
            android:background="@null"
            android:maxLines="1"
            android:maxLength="11"
            android:inputType="number|phone"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iv_username_clean"
            android:src="@mipmap/icon_input_clean"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_password"
        android:orientation="horizontal"
        android:background="@drawable/shape_rectangle_f8f_100"
        android:layout_marginTop="15dp"
        android:paddingVertical="17dp"
        android:paddingHorizontal="20dp"
        android:layout_marginHorizontal="25dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_username">

        <EditText
            android:text="123456"
            android:id="@+id/et_password"
            android:textSize="15sp"
            android:textColor="@color/black_333"
            android:hint="@string/login_hint_password"
            android:textColorHint="@color/black_bbb"
            android:background="@null"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iv_password_clean"
            android:src="@mipmap/icon_input_clean"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login"
        android:text="@string/login_login"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/shape_rectangle_279_100"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_password"/>

    <TextView
        android:id="@+id/tv_register"
        android:text="@string/login_register"
        android:textSize="18sp"
        android:textColor="@color/blue_279"
        android:background="@drawable/shape_rectangle_eef_100"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>