<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:paddingHorizontal="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/title_margin_top"
        android:text="@string/login_title"
        android:textColor="@color/black_333"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_rectangle_f8f_100"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@mipmap/icon_search" />

        <TextView
            android:layout_weight="1"
            android:text="@string/message_search_hint"
            android:textSize="14sp"
            android:textColorHint="@color/black_aaa"
            android:maxLines="1"
            android:paddingHorizontal="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_key"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:enabled="false"
            android:hint="@string/message_search_hint"
            android:maxLines="1"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black_333"
            android:textColorHint="@color/black_aaa"
            android:textSize="14sp"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_no_data"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@mipmap/bg_no_data"
            android:layout_width="177dp"
            android:layout_height="153dp" />

        <TextView
            android:text="@string/message_no_data"
            android:textSize="15sp"
            android:textColor="@color/black_333"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_chat_record"
        android:scrollbars="none"
        android:layout_below="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>