<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/layout_back"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="15dp"
                android:layout_marginHorizontal="10dp"
                android:src="@mipmap/icon_back_white"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/iv_avatar"
            android:scaleType="centerCrop"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:roundPercent="1"/>

        <TextView
            android:id="@+id/tv_name"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/shape_round_top_white_20"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/tv_add_friend"
            android:text="@string/friend_add"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/shape_rectangle_279_100"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_agree"
            android:text="@string/friend_agree"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/shape_rectangle_279_100"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_send_message"
            android:text="@string/friend_send_message"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/shape_rectangle_279_100"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>