<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/title_margin_top"
        android:layout_marginBottom="10dp"
        android:text="@string/friends_title"
        android:textColor="@color/black_333"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout_search"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/shape_rectangle_f8f_100"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/icon_search" />

                <EditText
                    android:id="@+id/et_key"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:enabled="false"
                    android:hint="@string/friends_search_hint"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/black_333"
                    android:textColorHint="@color/black_aaa"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_add"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"
                android:gravity="center_vertical"
                android:paddingVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:src="@mipmap/icon_add_friend"
                    android:background="@color/theme"
                    android:padding="8dp"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    app:roundPercent="1"/>

                <TextView
                    android:layout_weight="1"
                    android:text="@string/friends_new"
                    android:textSize="16sp"
                    android:textColor="@color/black_333"
                    android:layout_marginStart="12dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:src="@mipmap/icon_go"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <View
                android:background="@color/black_eee"
                android:layout_marginStart="65dp"
                android:layout_marginEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_friends"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>