<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/iv_avatar"
            android:scaleType="centerCrop"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:roundPercent="1"/>

        <TextView
            android:id="@+id/tv_name"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="3"
        android:orientation="vertical"
        android:background="@drawable/shape_round_top_white_20"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:id="@+id/layout_setting"
            android:orientation="horizontal"
            android:background="@drawable/shape_rectangle_f7f_7"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@mipmap/icon_setting"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:text="@string/mine_setting"
                android:textSize="15sp"
                android:textColor="@color/black_333"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:src="@mipmap/icon_go"
                android:layout_width="20dp"
                android:layout_height="20dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_quit"
            android:orientation="horizontal"
            android:background="@drawable/shape_rectangle_f7f_7"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@mipmap/icon_quit"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:text="@string/mine_quit"
                android:textSize="15sp"
                android:textColor="@color/black_333"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:src="@mipmap/icon_go"
                android:layout_width="20dp"
                android:layout_height="20dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_logout"
            android:orientation="horizontal"
            android:background="@drawable/shape_rectangle_f7f_7"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@mipmap/icon_logout"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:text="@string/mine_logout"
                android:textSize="15sp"
                android:textColor="@color/black_333"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:src="@mipmap/icon_go"
                android:layout_width="20dp"
                android:layout_height="20dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>