<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.amap.api.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/iv_coordinate"
        android:src="@mipmap/icon_map_coordinate"
        android:layout_centerHorizontal="true"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bg_map_head" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/map_cancel"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_send"
        android:text="@string/map_send"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_round_theme_5"
        android:paddingHorizontal="5dp"
        android:paddingVertical="3dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/iv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_search"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_round_white_10"
        android:padding="10dp"
        android:src="@mipmap/icon_map_my_location" />

    <LinearLayout
        android:id="@+id/layout_search"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_map_bottom"
        android:orientation="vertical"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_rectangle_f8f_100"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/icon_search" />

            <EditText
                android:id="@+id/et_key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/map_search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="7dp"
                android:textColor="@color/black_333"
                android:textColorHint="@color/black_aaa"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_result"
            android:orientation="vertical"
            android:layout_marginBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">

            <TextView
                android:id="@+id/tv_search_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black_333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_search_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/black_999"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>